--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,8 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: auto;
 }
 #lista, a {
   display: inline-block;
