--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,10 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0, 0, 0);
+  background-color: #181414;
   width: 100vw;
-  height:100vh;
+  height: 100vh;
+  --webkit-height: 100vh ;
 }
 #lista, a {
   display: inline-block;
