--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ footer {
   justify-content: center;
   background-color: #181414;
   width: 100vw;
+  height: 100%;
   --webkit-height: 100%;
 }
 #lista, a {
