--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: #181414;
-  height: 100%;
+  height: 100vh;
 }
 #lista, a {
   display: inline-block;
