--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: #181414;
+  width: 100%;
   --webkit-height: 100vh;
   height: 100vh;
 
