--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,7 @@ body {
   padding: 0;
 }
 
-body{
-  background-image: image-set("download.png");
-}
+
 
 nav{
   background-color: rgb(63, 63, 63);
@@ -47,18 +45,16 @@ footer {
   color: #fff;
 }
 
-
-#pp{
+#pai{
   display: flex;
   align-items: center;
-  justify-content: center;
   background-color: #181414;
-  width: 100%;
-  height: 100vh;
-  --webkit-height: 100vh;
-  
-
+  justify-content: center;
+  width: 100vw;
+  height: 100%;
 }
+
+
 #lista, a {
   display: inline-block;
   text-decoration: none;
