--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ footer {
   align-items: center;
   background-color: #181414;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 
