--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ fieldset{
 /* FUNCAO DA ABA eXTENSOES_WEB */
 
 #imm{
-  margin-top: -15px;  margin-left:10px; width:20px; height:20px; position: absolute; box-shadow: 3px 0px 3px #ff0000;
+  --webkit-margin-top: -15px;  margin-left:10px; width:20px; height:20px; position: absolute; box-shadow: 3px 0px 3px #ff0000;
   border-radius: 0.5rem;
 }
 #imm:hover{
