--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ article{
   align-items: center;
   justify-content: center;
   margin-top: 1rem;
+  position: relative;
   
 }
 legend{
@@ -125,7 +126,7 @@ fieldset{
 /* FUNCAO DA ABA eXTENSOES_WEB */
 
 #imm{
-  margin-top:-15px; margin-left:10px; width:20px; height:20px; position: absolute; box-shadow: 3px 0px 3px #ff0000;
+  margin-top:-20px; margin-left:10px; width:20px; height:20px; position: absolute; box-shadow: 3px 0px 3px #ff0000;
   border-radius: 0.5rem;
 }
 #imm:hover{
