--- a/styles.css
+++ b/styles.css
@@ -357,3 +357,80 @@ h1 {
     font-size: 15px;
   }
 }
+
+h4{
+  text-align: justify;
+  text-transform: uppercase;
+  color: #444000;
+}
+
+
+#canaisDroteadores{
+  color:rgb(53, 53, 53);
+  text-align: left;
+}
+
+/*Tabela dos celulares*/
+
+table {
+  width: 100%;
+  border-collapse: collapse; /* Remove espaços entre as bordas */
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+/* Opções adicionais */
+/* Cor de fundo para linhas ímpares */
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+/* Cor do texto */
+th, td {
+  color: black;
+}
+
+/* Espaçamento interno */
+td {
+  padding: 10px;
+}
+
+/* Largura das colunas */
+th:nth-child(1) {
+  width: 15%;
+}
+
+th:nth-child(2) {
+  width: 12%;
+}
+
+th:nth-child(3) {
+  width: 10%;
+}
+
+th:nth-child(4) {
+  width: 10%;
+}
+
+th:nth-child(5) {
+  width: 10%;
+}
+
+/* Fonte */
+th, td {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  text-align: center;
+}
+
+/*ESPAÇO ENTRE AS LI DA TABELA*/
+
+#espaço:not(:first-child) { margin-top: 1em; } 
