--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,7 @@ th {
 
 /* Opções adicionais */
 /* Cor de fundo para linhas ímpares */
---webkit tr:nth-child(even) {
+tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
@@ -404,23 +404,23 @@ td {
 }
 
 /* Largura das colunas */
---webkit th:nth-child(1) {
+th:nth-child(1) {
   width: 15%;
 }
 
---webkit th:nth-child(2) {
+th:nth-child(2) {
   width: 12%;
 }
 
---webkit th:nth-child(3) {
+th:nth-child(3) {
   width: 10%;
 }
 
---webkit th:nth-child(4) {
+th:nth-child(4) {
   width: 10%;
 }
 
---webkit th:nth-child(5) {
+th:nth-child(5) {
   width: 10%;
 }
 
