--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ h1 {
 
 .item.ativo .conteudo {
   max-height: 300px;
-  padding: 10px 24px 20px 24px;
+  padding: 10px 10px 10px 10px;
 }
 
 @media (max-width: 600px) {
@@ -386,11 +386,11 @@ td {
 
 /* Largura das colunas */
 th:nth-child(1) {
-  width: 15%;
+  width: 1%;
 }
 
 th:nth-child(2) {
-  width: 12%;
+  width: 16%;
 }
 
 th:nth-child(3) {
@@ -402,6 +402,10 @@ th:nth-child(4) {
 }
 
 th:nth-child(5) {
+  width: 20%;
+}
+
+th:nth-child(6) {
   width: 10%;
 }
 
